# dynamicinteriorfog

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  PCH.h  README.md  vcpkg-configuration.json
.github/workflows/: cmake-multi-platform.yml  nexus-upload.yml
include/: Config.h  FogManager.h  Hooks.h  RenderUtils.h  SKSEMenuFramework.h  Shader.h  UI.h
src/: Config.cpp  FogManager.cpp  Hooks.cpp  RenderUtils.cpp  Shader.cpp  UI.cpp  plugin.cpp
static/: config.json
